--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/randy-presale.appspot.com/o/randycon.ico?alt=media&token=fda6fe16-111d-4ed9-bf11-f68ad793bed0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,7 +26,15 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <title>React App</title>
+    <title>The $RANDY COIN</title>
+    <meta property="og:title" content="The Randy Coin" />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/randy-presale.appspot.com/o/randyCoin.png?alt=media&token=3c5c1a86-4bbd-4a70-9ad7-020f05be4e22" />
+    <meta property="og:image:secure_url" content="https://firebasestorage.googleapis.com/v0/b/randy-presale.appspot.com/o/randyCoin.png?alt=media&token=3c5c1a86-4bbd-4a70-9ad7-020f05be4e22" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="Just a coin that a little bit of $RANDY" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
